--- a/Curso-CSS-Universidade_XTI/WebContent/Aula_020-Posicionamento_Absoluto/Posicionamento_Absoluto.html
+++ b/Curso-CSS-Universidade_XTI/WebContent/Aula_020-Posicionamento_Absoluto/Posicionamento_Absoluto.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
+
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Posicionamento Absoluto</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="CSS/Posicionamento_Z_Index.css" media="all" />
+        <link rel="stylesheet" type="text/css" href="CSS/Posicionamento_Absoluto.css" media="all" />
     </head>
     <body>
         <div>
