--- a/Curso-CSS-Universidade_XTI/WebContent/Aula_015-Estilizacao_de_Links/Estilizacao_de_Links.html
+++ b/Curso-CSS-Universidade_XTI/WebContent/Aula_015-Estilizacao_de_Links/Estilizacao_de_Links.html
@@ -10,6 +10,6 @@
         <a href="http://www.google.com.br/">google</a><br />
         <a href="maito:leonardo.p.souza1994@gmail.com">email</a><br />
         <a href="http://187.7.106.14/cvra/RC/Cisco_PT.zip">.ZIP</a><br />
-        <a href="#"><img src="CSS/img/css.png" /></a>
+        <a href="#"><img src="../CSS/img/css.png" /></a>
     </body>
 </html>
